--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview --port 5050",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
+    "test": "vitest"
   },
   "dependencies": {
     "vue": "^3.2.31",
@@ -13,8 +14,10 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.2.2",
+    "@vue/test-utils": "^2.0.0-rc.17",
     "eslint": "^8.5.0",
     "eslint-plugin-vue": "^8.2.0",
-    "vite": "^2.8.4"
+    "vite": "^2.8.4",
+    "vitest": "^0.7.4"
   }
 }
