--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@vue/test-utils": "^2.0.0-rc.17",
     "eslint": "^8.5.0",
     "eslint-plugin-vue": "^8.2.0",
+    "jsdom": "^19.0.0",
     "vite": "^2.8.4",
     "vitest": "^0.7.4"
   }
